# workweek_survey

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  roadmap.yaml
.github/workflows/: ci.yml
analytics/: summary.ipynb
docs/: usage.md
src/workweek_survey/: __init__.py  config.py  dashboard.py  main.py  schema.py  storage.py  utils.py
src/workweek_survey/static/: dashboard.js  styles.css
src/workweek_survey/templates/: dashboard.html  survey.html
tests/: test_api.py  test_config.py  test_dashboard.py  test_initialization.py  test_schema.py  test_storage.py  test_survey_flow.py
